tests/algorithms/x/C/sorts/recursive_quick_sort.c
// Generated by Mochi 0.10.32 on 2025-08-11 17:23 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t concat_len;
size_t quick_sort_len;

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%d", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static long long* list_append_int_new(const long long *arr, size_t len, long long val) {
    long long *res = malloc((len + 1) * sizeof(long long));
    if (arr && len) memcpy(res, arr, len * sizeof(long long));
    res[len] = val;
    return res;
}

static size_t concat_len;
static long long* concat_long_long(long long *a, size_t a_len, const long long *b, size_t b_len) {
    long long *res = realloc(a, (a_len + b_len) * sizeof(long long));
    if (b_len > 0) memcpy(res + a_len, b, b_len * sizeof(long long));
    concat_len = a_len + b_len;
    return res;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * concat(long long * a, size_t a_len, long long * b, size_t b_len);
long long * quick_sort(long long * data, size_t data_len);
int main(void);

long long * concat(long long * a, size_t a_len, long long * b, size_t b_len) {
    long long *result = NULL;
    size_t result_len = 0;
    for (size_t __i = 0; __i < a_len; __i++) {
        long long x = a[__i];
        result = list_append_long_long(result, &result_len, x);
    }
    for (size_t __i = 0; __i < b_len; __i++) {
        long long x = b[__i];
        result = list_append_long_long(result, &result_len, x);
    }
    return concat_len = result_len, result;
}

long long * quick_sort(long long * data, size_t data_len) {
    if (data_len <= 1LL) {
        return quick_sort_len = data_len, data;
    }
    long long pivot = data[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? data_len + _mochi_idx : _mochi_idx;})];
    long long *left = NULL;
    size_t left_len = 0;
    long long *right = NULL;
    size_t right_len = 0;
    long long i = 1LL;
    while (i < data_len) {
        long long e = data[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? data_len + _mochi_idx : _mochi_idx;})];
        if (e <= pivot) {
            left = list_append_long_long(left, &left_len, e);
        } else {
            right = list_append_long_long(right, &right_len, e);
        }
        i = i + 1LL;
    }
    long long *sorted_left = quick_sort(left, left_len);
    size_t sorted_left_len = quick_sort_len;
    long long *sorted_right = quick_sort(right, right_len);
    size_t sorted_right_len = quick_sort_len;
    long long *left_pivot = list_append_int_new(sorted_left, sorted_left_len, pivot);
    size_t left_pivot_len = sorted_left_len + 1;
    {
        long long* __ret2 = concat_long_long(left_pivot, left_pivot_len, sorted_right, sorted_right_len);
        quick_sort_len = concat_len;
        return __ret2;
    }
}

int main(void) {
    {
        long long __start = _now();
        puts(({long long *__tmp3 = quick_sort(({long long *tmp = malloc(3 * sizeof(long long)); tmp[0] = 2LL; tmp[1] = 1LL; tmp[2] = 0LL; tmp;}), 3); char *__res = str_list_int(__tmp3, quick_sort_len); __res;}));
        puts(({long long *__tmp4 = quick_sort(({long long *tmp = malloc(5 * sizeof(long long)); tmp[0] = 3LL; tmp[1] = 5LL; tmp[2] = 2LL; tmp[3] = 4LL; tmp[4] = 1LL; tmp;}), 5); char *__res = str_list_int(__tmp4, quick_sort_len); __res;}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
